--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,23 +1,86 @@
 :root {
---primary-color: #fed766 ;
---secondary-color: #272727;
---primary-background: #009fb7;
+  --primary-color: #fed766;
+  --secondary-color: #272727;
+  --primary-background: #009fb7;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
 }
 
 header {
-    background-color: var(--primary-color);
-    text-align: center;
-    padding: 16px;
+  background-color: var(--primary-color);
+  text-align: center;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo-company a img {
-height: 100px;
+  height: 100px;
+  /*NOT CLEAR WHY THIS LOGO IS NOT ON LEFT*/
+  text-align: right;
+  padding: 16px;
+}
 
+#nav-items {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 22px;
+}
+
+#nav-items a {
+  text-decoration: none;
+  text-shadow: 2px 5px 4px rgba(127, 137, 200, 0.76);
+  text
+}
+
+footer {
+  background-color: var(--primary-color);
+  text-align: center;
+  padding: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 22px;
+}
+
+.social-media {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.social-media a i {
+    font-size: 32px;
+    color:var(--secondary-color);
+    margin: 24px;
+}
+
+.info {
+    margin: 5px 0;
+}
+@media screen and (min-width: 600px) {
+    header {
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+    }
+
+    #nav-items {
+        width: 50%;
+    }
+
+    .social-media {
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
