--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,8 @@
   --primary-color: #fed766;
   --secondary-color: #272727;
   --primary-background: #009fb7;
-  --secondary-background: #EBEBEB;
+  --secondary-background: #ebebeb;
+  --accesory-color: #faff70;
 }
 
 body {
@@ -30,22 +31,25 @@ header {
   padding: 16px;
 }
 
-#nav-items {
+#nav-pages {
   width: 100%;
   display: flex;
   justify-content: space-around;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 22px;
+  font-size: 23px;
 }
 
-#nav-items a {
+#nav-pages a {
   text-decoration: none;
-  text-shadow: 1px -5px 3px rgba(77,63,63,0.51);
-  color: var(--secondary-color)
+  font-weight: 400;
+  /* THIS ATTRIBUTES MIGHT NOT LOOK NICE. CAN BE EXCLUDED*/
+  /* text-shadow: 1px -5px 3px rgba(77,63,63,0.51); */
+  /* box-shadow: 0px 0px 40px 13px rgba(237,236,213,1); */
+  color: var(--secondary-color);
 }
 
-.nav-pages {
+.nav-list {
   display: flex;
   /* flex-direction: row; */
   align-items: center;
@@ -55,21 +59,27 @@ header {
   gap: 20px;
 }
 
-.nav-bar a {
-float: right;
-text-align: center;
-padding: 16px;
+.panel a {
+  float: left;
+  text-align: center;
+  padding: 16px;
+  border-radius: 15%;
 }
 
-.nav-bar a:hover {
-background-color: var(--primary-background);
-border-radius: 15%;
+.panel a:hover {
+  background-color: var(--primary-background);
+  border-radius: 15%;
+  font-weight: 700;
+  text-transform: capitalize;
 }
 
-.nav-bar a:active {
-  background-color: var(--secondary-background);
+.panel a:active {
+  background-color:var(--primary-color)
 }
 
+/* .nav-link {
+  transition: all 0.3s ease-in-out;
+} */
 
 footer {
   background-color: var(--primary-color);
@@ -77,38 +87,37 @@ footer {
   padding: 16px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .social-media {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
-
 .social-media a i {
-    font-size: 32px;
-    color:var(--secondary-color);
-    margin: 24px;
+  font-size: 32px;
+  color: var(--secondary-color);
+  margin: 24px;
 }
 
 .info {
-    margin: 5px 0;
+  margin: 5px 0;
 }
 @media screen and (min-width: 600px) {
-    header {
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-    }
+  header {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
 
-    #nav-items {
-        width: 50%;
-    }
+  #nav-pages {
+    width: 50%;
+  }
 
-    .social-media {
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  .social-media {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
