--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,13 +14,26 @@ body {
   justify-content: space-between;
 }
 
+/* Applied this sytle to the elements globally */
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 header {
   background-color: var(--primary-color);
   text-align: center;
-  padding: 16px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
 }
+
 /* Styling for the logo in the header */
 
 .logo-company {
@@ -31,7 +44,7 @@ header {
 }
 
 .logo-company img {
-height: 110px;
+  height: 110px;
 }
 
 /* Styling of navigation bar */
@@ -41,8 +54,6 @@ height: 110px;
   float: right;
   display: flex;
   justify-content: space-around;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 23px;
 }
 
@@ -80,7 +91,11 @@ height: 110px;
 }
 
 .panel a:active {
-  background-color:var(--primary-color)
+  background-color: var(--primary-color);
+}
+
+main {
+  height: auto;
 }
 
 /* .nav-link {
@@ -91,8 +106,6 @@ footer {
   background-color: var(--primary-color);
   text-align: center;
   padding: 16px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 22px;
 }
 
