--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,18 +4,10 @@
   --primary-background: #009fb7;
   --secondary-background: #ebebeb;
   --accesory-color: #faff70;
-}
-
-body {
-  margin: 0;
-  min-height: 120vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  --TEST-COLOR: magenta;
 }
 
 /* Applied this sytle to the elements globally */
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -26,12 +18,21 @@ body {
   font-style: normal;
 }
 
+body {
+  margin: 0;
+  min-height: 120vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 header {
   background-color: var(--primary-color);
   text-align: center;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 /* Styling for the logo in the header */
@@ -41,53 +42,82 @@ header {
   display: flex;
   gap: 1rem;
   justify-content: flex-start;
+font-size: 60px;
+font-weight: 900
+
 }
 
+/* #high-logo {
+  font-size: 60px;
+  font-weight: 900;
+}
+
+#value-logo {
+  font-size: 60px;
+  font-weight: 900; */
+
+
+
+
+
+
+/* THIS PART IS RELEVANT FOR AN IMAGE OR ICON INSTEAD PARAGRAPH */
 .logo-company img {
   height: 110px;
 }
 
 /* Styling of navigation bar */
 
-#nav-pages {
-  width: 100%;
-  float: right;
+
+.panel {
+  /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
+  MIGHT BE REMOVED IN THE FINAL PRODUCT */
+  /* background-color: var(--secondary-background); */
   display: flex;
-  justify-content: space-around;
-  font-size: 23px;
+  flex-direction: column;
+  max-width: 100vw;
+  justify-content: center;
+  padding: 0.7rem;
+  border-radius: 1.5rem;
+  
 }
 
-#nav-pages a {
-  text-decoration: none;
+#nav-pages {
+  display: flex;
   font-weight: 400;
-  /* THIS ATTRIBUTES MIGHT NOT LOOK NICE. CAN BE EXCLUDED*/
-  /* text-shadow: 1px -5px 3px rgba(77,63,63,0.51); */
-  /* box-shadow: 0px 0px 40px 13px rgba(237,236,213,1); */
-  color: var(--secondary-color);
-}
+  flex-direction: column;
+  justify-content: center;
+  font-size: 20px;
+} 
 
 .nav-list {
   display: flex;
-
-  align-items: center;
+  /* flex-direction: column; */
   flex-wrap: wrap;
-  list-style: none;
-  justify-content: space-around;
+  justify-content: flex-end; 
+  align-items: center;
+  padding: 15px;
   gap: 20px;
+  list-style: none;
 }
 
-.panel a {
-  float: left;
-  text-align: center;
-  padding: 16px;
+.nav-link {
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+
+li .active {
+  font-weight: 990;
+  background-color: var(--secondary-background);
+  padding: 15px;
   border-radius: 15%;
 }
 
 .panel a:hover {
   background-color: var(--primary-background);
-  border-radius: 15%;
+  padding: 16px;
+  border-radius: 12%;
   font-weight: 700;
-  text-transform: capitalize;
 }
 
 .panel a:active {
@@ -98,31 +128,45 @@ main {
   height: auto;
 }
 
-/* .nav-link {
-  transition: all 0.3s ease-in-out;
-} */
-
-footer {
+.footer {
+  margin-top 2rem;
   background-color: var(--primary-color);
-  text-align: center;
-  padding: 16px;
+  padding: px;
   font-size: 22px;
+  text-align: center;
 }
 
 .social-media {
   display: flex;
+  float: left;
+  width: 25%
   justify-content: space-around;
+  width: 18px;
 }
 
 .social-media a i {
   font-size: 32px;
   color: var(--secondary-color);
-  margin: 24px;
+  margin: 16px;
 }
 
 .info {
-  margin: 5px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
+
+.info-text {
+  flex: 1;
+  margin: 0 10px;
+}
+
+
+
+
+
+
+
 @media screen and (max-width: 600px) {
   header {
     align-items: flex-end;
