--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,11 @@
 :root {
-  --primary-color: #fed766;
+  --primary-color: #F0DD98;
   --secondary-color: #272727;
   --primary-background: #009fb7;
   --secondary-background: #ebebeb;
   --accesory-color: #faff70;
   --TEST-COLOR: magenta;
+  /* --primary-color: #fed766; */
 }
 
 /* Applied this sytle to the elements globally */
@@ -24,6 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: var(--primary-color);
 }
 
 header {
@@ -38,30 +40,15 @@ header {
 /* Styling for the logo in the header */
 
 .logo-company {
-  text-align: left;
-  display: flex;
-  gap: 1rem;
-  justify-content: flex-start;
-font-size: 60px;
-font-weight: 900
-
+text-align: left;
+display: flex;
+gap: 1rem;
+justify-content: flex-start;
+/* THIS MIGHT NO BE NEEDED, BC .logo-company DOESN'T HAVE FONT*/
+/* font-size: 60px; */
+/* font-weight: 900 */
 }
 
-/* #high-logo {
-  font-size: 60px;
-  font-weight: 900;
-}
-
-#value-logo {
-  font-size: 60px;
-  font-weight: 900; */
-
-
-
-
-
-
-/* THIS PART IS RELEVANT FOR AN IMAGE OR ICON INSTEAD PARAGRAPH */
 .logo-company img {
   height: 110px;
 }
@@ -72,14 +59,12 @@ font-weight: 900
 .panel {
   /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
   MIGHT BE REMOVED IN THE FINAL PRODUCT */
-  /* background-color: var(--secondary-background); */
+  /* background-color: lightblue; */
   display: flex;
   flex-direction: column;
   max-width: 100vw;
   justify-content: center;
   padding: 0.7rem;
-  border-radius: 1.5rem;
-  
 }
 
 #nav-pages {
@@ -126,13 +111,16 @@ li .active {
 
 main {
   height: auto;
+  background-color: blue;
 }
 
 .footer {
-  margin-top 2rem;
+  /* THIS MARGIN MIGHT GO OR NOT. ASSESS WITH FINAL RESULT AND MAKE A DECISION */
+  /* margin-top 2rem; */
   background-color: var(--primary-color);
-  padding: px;
-  font-size: 22px;
+  height: 24px;
+  padding: 20px 40px;
+  font-size: 45px;
   text-align: center;
 }
 
@@ -150,24 +138,62 @@ main {
   margin: 16px;
 }
 
+.footer-panel {
+  /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
+  MIGHT BE REMOVED IN THE FINAL PRODUCT */
+  background-color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  max-width: 100vw;
+  justify-content: center;
+  padding: 2.5rem;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  text-align: center;
+  justify-content: center;
+  gap: 15px;
+}
+
 .info {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
 .info-text {
   flex: 1;
-  margin: 0 10px;
+  margin 0 10px;
+}
+
+.info p {
+font-size: 20px;
+font-weight: 400;
+}
+
+.rights {
+  font-size: 20px;
+  font-weight: 400;
+  }
+
+/* Media query for mobiles phones */
+  @media screen and (max-width: 768px) {
+    
+  }
+
+
+/* Media query for tablets */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
 }
 
 
 
 
-
-
-
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   header {
     align-items: flex-end;
     justify-content: space-between;
@@ -182,4 +208,4 @@ main {
     margin-left: auto;
     margin-right: auto;
   }
-}
+} */
