--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 :root {
-  --primary-color: #F0DD98;
+  /* --primary-color: #F0DD98; */
+  --primary-color:#F19953;
   --secondary-color: #272727;
   --primary-background: #009fb7;
   --secondary-background: #ebebeb;
@@ -22,6 +23,7 @@
 body {
   margin: 0;
   min-height: 120vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -44,9 +46,6 @@ text-align: left;
 display: flex;
 gap: 1rem;
 justify-content: flex-start;
-/* THIS MIGHT NO BE NEEDED, BC .logo-company DOESN'T HAVE FONT*/
-/* font-size: 60px; */
-/* font-weight: 900 */
 }
 
 .logo-company img {
@@ -54,12 +53,10 @@ justify-content: flex-start;
 }
 
 /* Styling of navigation bar */
-
-
 .panel {
   /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
   MIGHT BE REMOVED IN THE FINAL PRODUCT */
-  /* background-color: lightblue; */
+  background-color: lightblue;
   display: flex;
   flex-direction: column;
   max-width: 100vw;
@@ -69,6 +66,7 @@ justify-content: flex-start;
 
 #nav-pages {
   display: flex;
+  width: 100%;
   font-weight: 400;
   flex-direction: column;
   justify-content: center;
@@ -114,20 +112,22 @@ main {
   background-color: blue;
 }
 
-.footer {
-  /* THIS MARGIN MIGHT GO OR NOT. ASSESS WITH FINAL RESULT AND MAKE A DECISION */
-  /* margin-top 2rem; */
-  background-color: var(--primary-color);
-  height: 24px;
-  padding: 20px 40px;
-  font-size: 45px;
-  text-align: center;
+.footer-panel {
+  /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL 
+  CHANGES TO RESPONSIVENESS. IT MIGHT BE REMOVED 
+  IN THE FINAL PRODUCT */
+  background-color: var(--TEST-COLOR);
+  display: flex;
+  flex-direction: row;
+  max-width: 100vw;
+  justify-content: space-between;
+  padding: 2.5rem;
 }
 
 .social-media {
   display: flex;
   float: left;
-  width: 25%
+  width: 25%;
   justify-content: space-around;
   width: 18px;
 }
@@ -138,74 +138,50 @@ main {
   margin: 16px;
 }
 
-.footer-panel {
-  /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
-  MIGHT BE REMOVED IN THE FINAL PRODUCT */
-  background-color: var(--primary-color);
-  display: flex;
-  flex-direction: column;
-  max-width: 100vw;
-  justify-content: center;
-  padding: 2.5rem;
-}
-
-.footer-links {
-  display: flex;
-  flex-direction: column;
-  float: left;
-  text-align: center;
-  justify-content: center;
-  gap: 15px;
-}
-
 .info {
+  width: 25vw;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-.info-text {
-  flex: 1;
-  margin 0 10px;
-}
-
-.info p {
-font-size: 20px;
-font-weight: 400;
-}
-
-.rights {
-  font-size: 20px;
-  font-weight: 400;
-  }
+/* .info-item {
+  align-items: space-around;
+} */
 
 /* Media query for mobiles phones */
   @media screen and (max-width: 768px) {
     
-  }
+.logo-company img {
+    height: 50px;
+  } 
 
-
-/* Media query for tablets */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-
+#nav-pages {
+  display: flex;
+  align-items:;
+  font-size: 8px;
 }
 
 
 
-
-/* @media screen and (max-width: 600px) {
-  header {
-    align-items: flex-end;
-    justify-content: space-between;
   }
 
-  #nav-pages {
-    width: 50%;
-  }
 
-  .social-media {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-} */
+/* Media query for tablets */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+
+  .logo-company img {
+    height: px;
+  } 
+
+#nav-pages {
+  display: flex;
+  flex-items: 
+  font-size: 8px;
+}
+
+.nav-link {
+  display: flex;
+  flex-direction: column;
+}
+
