--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 :root {
   /* --primary-color: #F0DD98; */
-  --primary-color:#F19953;
+  --primary-color: #f19953;
   --secondary-color: #272727;
   --primary-background: #009fb7;
   --secondary-background: #ebebeb;
@@ -35,21 +35,20 @@ header {
   text-align: center;
   padding: 20px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
 }
 
 /* Styling for the logo in the header */
 
 .logo-company {
-text-align: left;
-display: flex;
-gap: 1rem;
-justify-content: flex-start;
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-start;
 }
 
 .logo-company img {
-  height: 110px;
+  height: 10vh;
 }
 
 /* Styling of navigation bar */
@@ -57,31 +56,29 @@ justify-content: flex-start;
   /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
   MIGHT BE REMOVED IN THE FINAL PRODUCT */
   background-color: lightblue;
-  display: flex;
-  flex-direction: column;
+  /* APPARENTLY THESE TWO CONDITIONS ARE NOT NEEDED FOR ONE ELEMENT */
+  /* display: flex; */
+  /* flex-direction: row; */
   max-width: 100vw;
   justify-content: center;
   padding: 0.7rem;
 }
 
 #nav-pages {
-  display: flex;
   width: 100%;
   font-weight: 400;
-  flex-direction: column;
   justify-content: center;
-  font-size: 20px;
-} 
+}
 
 .nav-list {
   display: flex;
-  /* flex-direction: column; */
   flex-wrap: wrap;
-  justify-content: flex-end; 
+  justify-content: flex-end;
   align-items: center;
   padding: 15px;
   gap: 20px;
   list-style: none;
+  font-size: 1.4rem;
 }
 
 .nav-link {
@@ -108,7 +105,7 @@ li .active {
 }
 
 main {
-  height: auto;
+  height: 50dvw;
   background-color: blue;
 }
 
@@ -127,9 +124,8 @@ main {
 .social-media {
   display: flex;
   float: left;
-  width: 25%;
+  width: 20vw;
   justify-content: space-around;
-  width: 18px;
 }
 
 .social-media a i {
@@ -150,38 +146,64 @@ main {
 } */
 
 /* Media query for mobiles phones */
-  @media screen and (max-width: 768px) {
-    
-.logo-company img {
-    height: 50px;
-  } 
-
-#nav-pages {
+@media screen and (max-width: 767px) {
+.panel {
   display: flex;
-  align-items:;
-  font-size: 8px;
+  flex-direction: column;
+  align-items: flex-end;
+}
+ 
+
+  .logo-company img {
+    height: 7vh;
+  }
+
+  /* #nav-pages {
+    align-items: flex-end;
+  } */
+
+
+  .nav-list {
+    font-size: 0.9rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
 }
 
 
-
-  }
 
 
 /* Media query for tablets */
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
 
   .logo-company img {
-    height: px;
-  } 
+    height: 7vh;
+  }
 
 #nav-pages {
-  display: flex;
-  flex-items: 
-  font-size: 8px;
+  font-weight: 480;
 }
 
-.nav-link {
-  display: flex;
-  flex-direction: column;
+  .nav-list {
+  font-size: 0.9rem;
+
+  /* .nav-list {
+    display: inline;
+  } */
+
+  /* .nav-link {
+    display: flex;
+    flex-direction: column;
+  } */
+
+  .info {
+    width: 45vw;
+  }
 }
 
+/* Media query for larger screen sizes */
+@media screen and (min-width: 1025px) {
+
+
+}
