--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,8 +2,8 @@
   /* --primary-color: #F0DD98; */
   --primary-color: #F0EADA;
   --secondary-color: #44344F;
-  --primary-background: #009fb7;
-  --secondary-background: #ebebeb;
+  --primary-background: #DAA41B;
+  --secondary-background: #EFCF81;
 }
 
 /* Applied this sytle to the elements globally */
@@ -30,7 +30,8 @@ body {
 header {
   background-color: var(--primary-color);
   text-align: center;
-  padding: 20px;
+  width: 100%;
+  padding: 1vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -51,10 +52,11 @@ header {
 
 /* Styling of navigation bar */
 .panel {
-  /* PURPOSE OF THIS COLOR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
+  /* PURPOSE OF THIS COLOUR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
   MIGHT BE REMOVED IN THE FINAL PRODUCT */
-  /* background-color: lightblue; */
-  max-width: 100vw;
+  background-color: lightblue;
+  justify-content: space-between;
+  width: 100%;
   flex-direction: row;
   align-content: center;
   padding: 0.7rem;
@@ -90,22 +92,22 @@ li .active {
 }
 
 .panel a:hover {
-  background-color: var(--primary-background);
+  /* background-color: var(--primary-background); */
   padding: 1rem;
   border-radius: 12%;
   font-weight: 700;
 }
 
-.panel a:active {
-  background-color: var(--primary-color);
-}
-
 main {
-  height: 50dvw;
+  height: 100%;
   background-color: var(--primary-color)
 }
 
-.footer-panel {
+footer {
+  align-items: flex-end;
+}
+
+footer {
   display: flex;
   flex-direction: row;
   max-width: 100vw;
@@ -113,11 +115,19 @@ main {
   padding: 2.5rem;
 }
 
+/* .footer-panel {
+  display: flex;
+  flex-direction: row;
+  max-width: 100vw;
+  justify-content: space-between;
+  padding: 2.5rem;
+} */
+
 .social-media {
   display: flex;
-  /* float: left; */
   width: 15vw;
   justify-content: space-around;
+  align-content: center;
 }
 
 .social-media a i {
@@ -130,7 +140,7 @@ main {
   width: 66vw;
   display: flex;
   flex-direction: row;
-  margin: 0;
+  margin-bottom: 0;
   justify-content: space-around;
   align-items: flex-start;
   font-size: 1.3rem;
@@ -142,29 +152,70 @@ main {
   padding: 1rem;
 }
 
+
+
+
+
 /* Media query for mobiles phones */
 @media screen and (max-width: 767px) {
-  .panel {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-  }
-
+  
   .logo-company img {
-    height: 7vh;
+    height: 12vh;
   }
-
-  /* #nav-pages {
-    align-items: flex-end;
-  /* }  */
 
   .nav-list {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    padding: 0;
+    gap: 0.5rem;
   }
+
+li .active {
+padding: 0.3rem;
 }
+
+.panel a:hover {
+ padding: 0.3rem;
+ border-radius: 10%;
+ font-weight: 990;
+}
+
+
+.footer-panel {
+  display: block;
+  width: 100%;
+  justify-content: center;
+}
+
+.social-media {
+width: 100vw;
+justify-content: stretch;
+
+  /* display: block;
+  width: 100vw;
+  align-content: space-evenly; */
+}
+
+/* .social-media .info {
+  display: block;
+  max-width: 100vw;
+} */
+
+
+
+.social-media a i {
+  font-size: 0.7rem;
+}
+
+.info {
+  font-size: 0.7rem;
+}
+
+
+}
+
 
 /* Media query for tablets */
 @media screen and (min-width: 768px) and (max-width: 1180px) {
