--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,9 +52,6 @@ header {
 
 /* Styling of navigation bar */
 .panel {
-  /* PURPOSE OF THIS COLOUR IS TO SEE HOW THE PANEL CHANGES TO RESPONSIVENESS. IT
-  MIGHT BE REMOVED IN THE FINAL PRODUCT */
-  background-color: lightblue;
   justify-content: space-between;
   width: 100%;
   flex-direction: row;
@@ -79,6 +76,8 @@ header {
   font-size: 1.4rem;
 }
 
+/* Styling of effects on links of navigation bar*/
+
 .nav-link {
   text-decoration: none;
   transition: all 0.3s ease-in-out;
@@ -98,10 +97,14 @@ li .active {
   font-weight: 700;
 }
 
+/* Styling of main block. For more details refer to home.css */
+
 main {
   height: 100%;
   background-color: var(--primary-color)
 }
+
+/* Styling of the footer section */
 
 footer {
   align-items: flex-end;
@@ -115,13 +118,7 @@ footer {
   padding: 2.5rem;
 }
 
-/* .footer-panel {
-  display: flex;
-  flex-direction: row;
-  max-width: 100vw;
-  justify-content: space-between;
-  padding: 2.5rem;
-} */
+/* styling of social media icons on the footer */
 
 .social-media {
   display: flex;
@@ -135,6 +132,8 @@ footer {
   color: var(--secondary-color);
   margin: 1rem;
 }
+
+/* styling of contact information details on the footer */
 
 .info {
   width: 66vw;
@@ -152,13 +151,11 @@ footer {
   padding: 1rem;
 }
 
-
-
-
-
 /* Media query for mobiles phones */
+
 @media screen and (max-width: 767px) {
   
+  /*  */
   .logo-company img {
     height: 12vh;
   }
