--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,4 @@
 :root {
-  /* --primary-color: #F0DD98; */
   --primary-color: #F0EADA;
   --secondary-color: #44344F;
   --primary-background: #DAA41B;
@@ -141,13 +140,13 @@ footer {
   flex-direction: row;
   margin-bottom: 0;
   justify-content: space-around;
-  align-items: flex-start;
   font-size: 1.3rem;
 }
 
 .info-item {
   white-space: nowrap;
   display: inline-block;
+  align-content: center;
   padding: 1rem;
 }
 
