--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,77 +1,133 @@
 :root {
-    --primary-color: #F0EADA;
-    --secondary-color: #44344F;
-    --primary-background: #DAA41B;
-    --secondary-background: #EFCF81;
-  }
+  --primary-color: #f0eada;
+  --secondary-color: #44344f;
+  --primary-background: #daa41b;
+  --secondary-background: #efcf81;
+  --button-link: rgb(235, 173, 16);
+}
 
+/* Styling of main area */
 main {
   display: flex;
-  align-items: center;
   flex-direction: column;
-  margin-bottom: 0.2rem;
+  align-items: center;
+  height: 80vh;
+  margin-bottom: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+/* Styling of "Contact us" heading */
 h1 {
-    display: flex;
-    color: var(--secondary-color);
-    padding: 1rem;
-    margin-bottom: 4rem;
-}
-
-.form-elements {
   display: flex;
   flex-direction: column;
-  margin-bottom: 24px;
+  align-items: center;
+  color: var(--secondary-color);
+  padding: 1rem;
+  margin-bottom: 4rem;
 }
 
+form {
+  width: 40%;
+}
+
+/* Global styling of Contact form */
+.form-elements {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+/* Editing of labels adjacent to input area */
 .form-elements label {
   font-size: 1.4rem;
+  padding: 0.5rem;
   color: var(--secondary-color);
 }
 
+/* Styling of actual typing area */
 .form-input {
   border: 0.05rem solid var(--secondary-color);
+  width: 70%;
   outline: none;
   border-radius: 0.25rem;
   font-size: 1rem;
 }
 
+/* Fixing size of input area, except "Details" typing box */
 .form-input:not(.form-textarea) {
-  height: 35px;
+  height: 2.2rem;
 }
 
+/* Avoid user to change size of typing area */
 .form-textarea {
   resize: none;
 }
 
-.form-input:focus {
-  box-shadow: 0px 0px 13px 5px var(--primary-color);
-}
-
+/* Positioning of "Submit" button */
 .btn-div {
   text-align: center;
 }
 
+/* Styling of "Submit" button */
 #submit {
-  height: 40px;
+  height: 3rem;
   background-color: var(--primary-color);
-  border: none;
+  border: #44344f;
   border-radius: 4px;
-  min-width: 120px;
-  font-size: 17px;
+  min-width: 7rem;
+  font-size: 1.4rem;
+  color: var(--secondary-color);
+  font-weight: 700;
+  background-color: var(--secondary-background);
 }
 
+/* Styling of effect on "Submit" button */
 #submit:hover {
   cursor: pointer;
-  background-color: #ffb6b699;
+  padding: 1rem;
+  background-color: var(--secondary-background);
+  transition: all 0.3s ease-in-out;
 }
 
-@media screen and (min-width: 600px) {
-  form {
-    width: 500px;
+/* Media query for mobiles phones */
+
+@media screen and (max-width: 767px) {
+  /* Reduction of heading size */
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  /* Downsizing of Contact form */
+  .form-elements {
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+  }
+
+  /* Downsizing of label font */
+  .form-elements label {
+    font-size: 1rem;
+  }
+
+  /* Change length of text area */
+  .form-input {
+    width: 120%;
+  }
+
+  /* Styling of submit button */
+  #submit {
+    height: 1.5rem;
+    min-width: 4rem;
+    font-size: 0.8rem;
+  }
+}
+
+/* Media query for tablets */
+@media screen and (min-width: 768px) and (max-width: 1180px) {
+  
+    form {
+    width: 48%;
   }
 
   .form-elements {
@@ -81,5 +137,12 @@ h1 {
 
   .form-input {
     width: 70%;
+  }
+
+  /* Styling of submit button */
+  #submit {
+    height: 2.2rem;
+    min-width: 6rem;
+    font-size: 1.2rem;
   }
 }
