--- a/src/styles/genblog.css
+++ b/src/styles/genblog.css
@@ -1,32 +1,64 @@
-:root {
-    --primary-color: #F0EADA;
-    --secondary-color: #44344F;
-    --primary-background: #DAA41B;
-    --secondary-background: #EFCF81;
-  }
-
-* {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+/* Styling for mobile device */
+  /* Editing title of the generic entry blog */
+h1 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0.1rem 0rem 1rem;
 }
-
-main {
+/* Styling of section with image and text */
+.genblog-image {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 3rem;
 }
 
+/* Styling image of only entry blog*/
+  .genblog-image img {
+    width: 75%;
+    margin: 2rem 2rem;
+    display: block;
+    filter: grayscale(75%);
+  }
+
+  /* styling of placeholder text */
+  .genblog-entry {
+    margin: 1rem 1rem;
+    text-align: justify;
+  }
+
+  /* Media query for tablets */
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    
 h1 {
     font-size: 1.5rem;
-    margin: 3rem;
+}
+/* Downsize of blog entry image */
+.genblog-image img {
+width: 65%;
 }
 
-p {
-    font-size: 1rem;
-    display: flex;
-    text-align: justify;
+/* Increase of placeholder font */
+.genblog-entry {
+    font-size: 1.2rem;
+}
 }
 
-media query
+/* Media query for larger screen*/
+@media screen and (min-width: 1025px) {
 
+/* Increased font size of h1 */
+    h1 {
+    font-size: 2.5rem;
+}
+
+/* Reduced image dimensions */
+.genblog-image img {
+    width:50%;
+}
+
+/* Increased size of placeholder font */
+.genblog-entry {
+    font-size: 1.6rem;
+}
+}
