--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -4,25 +4,56 @@
   --primary-background: #daa41b;
   --secondary-background: #efcf81;
 }
+/* Global styling of main section */
+main {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+}
 
+/* Adjustment of container size and font for each post */
 .blog-post {
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-align-items: center;
-margin: 0.8rem;   
-}
-
-.blog-image img {
-  width: 14rem;
-  border-radius: 10%;
-  margin: 0.3rem;
-  filter: grayscale(80%);
-}
-
-.blog-title, .blog-date {
+  width: 25rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 1rem;
-    text-align: center;
+    font-size: 1.4rem;
 }
+
+/* Standarization of image sizes, and gray color apply */
+.blog-image img {
+  width: 25rem;
+  height: 17rem;
+  filter: grayscale(80%);
+  border-radius: 10%;
+}
+
+/* Removal of default decoration of link */
+.blog-title {
+  text-decoration: none;
+}
+
+/* Styling of text-link in the blog-post section */
+.blog-title a {
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 1.4rem;
+}
+
+/* Media query for mobile devices  */
+@media screen and (min-width: 768px) and (max-width: 1180px;) {
+
+.blog-post {
+ width: 10rem;
+}
+
+
+.blog-title a {
+  font-size: 0.4rem
+
+
+}
+
+
+}
+
+
