--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -161,7 +161,6 @@ footer {
     gap: 0.5rem;
   }
 
-
 /* styling of active page */
 li .active {
 padding: 0.3rem;
@@ -174,17 +173,16 @@ padding: 0.3rem;
  font-weight: 990;
 }
 
-
-.footer-panel {
-  display: block;
-  width: 100%;
-  justify-content: center;
+footer {
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0.2rem;
 }
 
 /* Adujustments of size and weight of footer content */
 .social-media {
 width: 100vw;
-justify-content: stretch;
+justify-content: center;
 }
 
 .social-media a i {
@@ -193,8 +191,10 @@ justify-content: stretch;
 
 .info {
   font-size: 0.7rem;
+  /* THIS ONE */
+  justify-content: space-around;
+  width: 100%
 }
-
 }
 
 /* Media query for tablets */
