--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -6,7 +6,7 @@ main {
   justify-content: center;
 }
 
-/* Adjustment of container size and font for each post */
+/* Adjustment of container size and font for each blog post */
 .blog-post {
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@ main {
 
 /* Removal of default decoration of link */
 .blog-title {
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 /* Styling of text-link in the blog-post section */
@@ -49,7 +49,20 @@ font-size: 1.4rem;
 /* Media query for mobile devices  */
 @media screen and (max-width: 767px) {
 
-/* .blog-post {
+main {
+  /* width: 100% */
+  flex-wrap: nowrap;
+  flex-direction: column;
+
+}
+
+article {
+  align-items: center;
+}
+
+
+
+.blog-post {
   font-size: 0.8rem;
   font-weight: 500;
 }
@@ -61,9 +74,9 @@ font-size: 1.4rem;
 }
 
 .blog-title a {
-  font-size: 0.8rem; */
+  font-size: 0.8rem; 
 }
-
+}
 
 
 
