--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,75 @@
-main {
-    height: auto;
-    background-color: var(--accesory-color);
+
+/*Style of section with profile picture and welcome text */
+.welcome {
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  gap: 3rem; 
+  padding: 1rem; 
 }
 
-p {
+/* Style the profile picture */
+.profile-pic img {
+  width: 30rem; 
+  height: 34rem; 
+  border-radius: 50%; 
+  object-fit: cover; 
+}
+
+/* Style the welcome text container */
+.welcome-text {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; 
+  max-width: 45%; 
+  text-align: justify;
+}
+
+/*Styling of the welcome text */
+.welcome-text h1 {
+  font-size: 2rem; 
+  margin-bottom: 0.5rem; /* Space below the heading */
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 767px) {
+  
+  /* Change stacking direction of welcome section*/
+    .welcome {
+    flex-direction: column; 
+    align-items: center; 
     text-align: center;
+  }
+
+  /*Adjust of profile picture for mobile*/
+  .profile-pic img {
+    width: 40%; 
+    height: auto;
+
+  }
+
+  .welcome-text {
+    max-width: 90%; 
+    font-size: 0.5rem
+  }
+
+  .welcome-text h1 {
+    font-size: 1rem;
+  }
+
+
+}
+
+/* Media query for tablets */
+@media screen and (min-width: 768px) and (max-width: 1180) {
+
+.welcome {
+flex-direction: column;
+align-items: center;
+text-align: center;
+}
+
+.profile-pic img {
+    width: 80px; /* Adjust the size for mobile */
+    height: 80px;
+  }
 }
