--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,7 +37,6 @@ header {
 }
 
 /* Styling for the logo in the header */
-
 .logo-company {
   display: flex;
   gap: 1rem;
@@ -95,16 +94,16 @@ li .active {
   font-weight: 700;
 }
 
+main {
+max-width: 1280px;
+}
 
 /* Styling of the footer section */
 
 footer {
-  align-items: flex-end;
-}
-
-footer {
   display: flex;
   flex-direction: row;
+  align-items: flex-end;
   max-width: 100vw;
   justify-content: space-between;
   padding: 2.5rem;
@@ -153,7 +152,7 @@ footer {
 
   /* nav bar changed to column arrangement and moved to far right */
   .nav-list {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -186,12 +185,11 @@ justify-content: center;
 }
 
 .social-media a i {
-  font-size: 0.7rem;
+  font-size: 1rem;
 }
 
 .info {
   font-size: 0.7rem;
-  /* THIS ONE */
   justify-content: space-around;
   width: 100%
 }
