--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,8 +4,9 @@
   display: flex;
   align-items: center; 
   justify-content: center;
-  gap: 3rem; 
-  padding: 1rem; 
+  width: 100%;
+  gap: 3rem;
+  margin-left: 3rem; 
 }
 
 /* Style the profile picture */
@@ -18,58 +19,63 @@
 
 /* Style the welcome text container */
 .welcome-text {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; 
+  font-family:
   max-width: 45%; 
   text-align: justify;
+font-size: 1.3rem ;
 }
 
 /*Styling of the welcome text */
-.welcome-text h1 {
+.welcome-text p {
   font-size: 2rem; 
-  margin-bottom: 0.5rem; /* Space below the heading */
+  margin-bottom: 0.5rem;
 }
 
 /* Media query for mobile devices */
 @media screen and (max-width: 767px) {
   
   /* Change stacking direction of welcome section*/
-    .welcome {
+  .welcome {
     flex-direction: column; 
     align-items: center; 
     text-align: center;
+    margin-left: 0.3rem;
   }
 
   /*Adjust of profile picture for mobile*/
   .profile-pic img {
     width: 40%; 
     height: auto;
-
   }
 
   .welcome-text {
-    max-width: 90%; 
-    font-size: 0.5rem
+    max-width: 80%; 
+    /* font-size: 0.1rem */
   }
 
-  .welcome-text h1 {
-    font-size: 1rem;
+  .welcome-text p {
+    font-size: 0.4rem;
   }
-
-
 }
 
 /* Media query for tablets */
 @media screen and (min-width: 768px) and (max-width: 1180) {
 
+  /*Style of main section of page*/
 .welcome {
-flex-direction: column;
+/* WHY IS IT NOT STACKING THE CONTENT IN COLUMN */
+  flex-direction: column;
 align-items: center;
 text-align: center;
 }
 
+/* Style of profile picture */
 .profile-pic img {
-    width: 80px; /* Adjust the size for mobile */
-    height: 80px;
+    width: 1rem; 
+    height: 1rem;
   }
+}
+
+.welcome-text p {
+  font-size: 1.4rem;
 }
