--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,7 @@
 
 body {
   margin: 0;
-  min-height: 120vh;
+  /* min-height: 120vh; */
   width: 100%;  
   display: flex;
   flex-direction: column;
@@ -192,7 +192,7 @@ justify-content: center;
 }
 
 /* Media query for tablets */
-@media screen and (min-width: 768px) and (max-width: 1180px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   
   /*Downsized of logo on header */
   .logo-company img {
